# mexIpopt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakelists.txt  README.md  azurepipeline.yml  buildUbuntu.sh  hs71.m  main.cpp  make.m  make.sh  mexFunctions.hpp  nlp.hpp  stream.hpp  vcpkg.json  version.h.in
.devcontainer/: Dockerfile  pkgconfig.patch
.github/workflows/: ci.yml
include/: nlp.hpp  stream.hpp
matlab/: BaseBinaryFinder.m  BaseProblem.m  Himmelblau.m  HimmelblauDirect.m  HimmelblauModel.m  IsMemberOf.m  ModelBaseProblem.m  OptionsTest.m  ProblemData.m  hs71.m  hs71Direct.m  hs71Model.m  ipoptInterface.m
mkl/: blas_example_list  lapack_example_list  makefile
src/: main.cpp  modelEval.cpp
test/: CMakeLists.txt
test/include/: hs071_nlp.hpp
test/src/: hs071_main.cpp  hs071_nlp.cpp
